--- a/views/companies.ejs
+++ b/views/companies.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+<%- include('./partials/navbar') %>
 <body>
   <hr>
   <h1>COMPANY LIST</h1>
@@ -22,7 +23,9 @@
         <td>Location</td>
         <td>Email</td>
         <td>Description</td>
+        <% if (isAdmin) {%>
         <td>Action</td>
+        <% } %>
       </tr>
     </thead>
     <tbody>
