--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,10 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Landing</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
-  
+  <h1>LIVIN'HOOD</h1><br>
+  <h2>Your Financial Partner</h2><br><br>
+  <p>We have <%= data.dataValues.TotalUser %> active users, and a daily transaction as large as <%= currency(data.dataValues.MaxCredit) %></p>
+  <p>Join us for a better future</p>
+  <a href="/register"><button>REGISTER</button></a>
+  <a href="/login"><button>LOGIN</button></a>
 </body>
 </html>
