--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,25 +10,25 @@
   <h1>Register</h1>
   <form action="/register" method="post">
       <label for="name"><b>Name</b></label>
-      <input type="text" placeholder="Enter Name" name="name" >
+      <input type="text" placeholder="Enter Name" name="name" required><br>
       
       <label for="password"><b>Password</b></label>
-      <input type="password" placeholder="Create Password" name="password" >
+      <input type="password" placeholder="Create Password" name="password" required><br>
 
       <label for="email"><b>Email</b></label>
-      <input type="email" placeholder="ex. 1337@example.com" name="email" >
+      <input type="email" placeholder="ex. 1337@example.com" name="email" required><br>
       
       <label for="bankAccountNumber"><b>Bank Account Number</b></label>
-      <input type="text" placeholder="Enter Your Bank Account Number" name="bankAccountNumber" >
+      <input type="text" placeholder="Enter Your Bank Account Number" name="bankAccountNumber" required><br>
 
       <label for="credit"><b>First Top-Up</b></label>
-      <input type="number" placeholder="ex. 1000" name="credit" >
+      <input type="number" placeholder="ex. 1000" name="credit" required><br>
 
       <label for="isAdmin"><b>Admin</b></label>
       <input type="radio" value="true" name="isAdmin" >
 
       <label for="isAdmin"><b>User</b></label>
-      <input type="radio" value="false" name="isAdmin" >
+      <input type="radio" value="false" name="isAdmin" ><br>
   
       <button type="submit">Register</button>
     </div>
